fix search bar UI issues on mobile devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -29,22 +29,27 @@ header {
 }
 
 #search-input {
-    flex: 7;
+    flex: 6;
     color: #757b88;
     padding: 0 0 0 30px;
+    -webkit-border-radius: 0;
     -webkit-border-top-left-radius: 45px;
     -webkit-border-bottom-left-radius: 45px;
+    -moz-border-radius: 0;
     -moz-border-radius-topleft: 45px;
     -moz-border-radius-bottomleft: 45px;
+    border-radius: 0;
     border-top-left-radius: 45px;
     border-bottom-left-radius: 45px;
 }
 
 #search-btn {
-    flex: 2;
+    flex: 3;
+    line-height: 40px;
     background-color: tomato;
     color: #ffffff;
     cursor: pointer;
+    text-align: center;
     -webkit-border-top-right-radius: 45px;
     -webkit-border-bottom-right-radius: 45px;
     -moz-border-radius-topright: 45px;
